Agrego validacion de datos en mi perfil para crear necesidad

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -176,6 +176,7 @@
     <Content Include="Views\Necesidad\ModificarNecesidad.cshtml" />
     <Content Include="Views\Necesidad\_pvCamposModificacion.cshtml" />
     <Content Include="Views\Necesidad\View.cshtml" />
+    <Content Include="Views\Necesidad\_pvCamposCreacion.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
