--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -116,9 +116,12 @@
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
     <Compile Include="Repository\IngresarRepository.cs" />
+    <Compile Include="Repository\DenunciaRepository.cs" />
+    <Compile Include="Repository\NecesidadesValoracionesRepository.cs" />
     <Compile Include="Repository\NecesidadRepository.cs" />
     <Compile Include="Repository\RegistrarseRepository.cs" />
     <Compile Include="Repository\PerfilRepository.cs" />
+    <Compile Include="ViewModels\NecesidadModificacion.cs" />
     <Compile Include="ViewModels\NecesidadDonacionMonetaria.cs" />
     <Compile Include="ViewModels\NecesidadDonacionInsumo.cs" />
     <Compile Include="ViewModels\NecesidadCreacion.cs" />
