--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Home\DenunciaService.cs" />
     <Compile Include="Home\EmailService.cs" />
     <Compile Include="Home\IngresarService.cs" />
     <Compile Include="Home\NecesidadService.cs" />
