--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -43,6 +43,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -111,9 +112,17 @@
     <Compile Include="ORM\UsuariosTipo.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Partial\DonacionHistorialMetaData.cs" />
+    <Compile Include="Partial\IngresarMetaData.cs" />
+    <Compile Include="Partial\NecesidadesMetaData.cs" />
+    <Compile Include="Partial\PerfilMetaData.cs" />
+    <Compile Include="Partial\RegistrarseMetaData.cs" />
     <Compile Include="Partial\UsuariosPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\DenunciaEstadoRepository.cs" />
+    <Compile Include="Repository\DonacionInsumoRepository.cs" />
+    <Compile Include="Repository\DonacionMonetariaRepository.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
     <Compile Include="Repository\IngresarRepository.cs" />
     <Compile Include="Repository\DenunciaRepository.cs" />
@@ -121,6 +130,7 @@
     <Compile Include="Repository\NecesidadRepository.cs" />
     <Compile Include="Repository\RegistrarseRepository.cs" />
     <Compile Include="Repository\PerfilRepository.cs" />
+    <Compile Include="Repository\UsuarioRepository.cs" />
     <Compile Include="ViewModels\NecesidadModificacion.cs" />
     <Compile Include="ViewModels\NecesidadDonacionMonetaria.cs" />
     <Compile Include="ViewModels\NecesidadDonacionInsumo.cs" />
