--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -57,8 +57,8 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.5.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
@@ -119,30 +119,11 @@
     <Content Include="Content\src\perfil.css" />
     <Content Include="Content\src\progressbar.css" />
     <Content Include="Content\site.css" />
-    <Content Include="Files\Brenda.Sosa\perfil.png" />
-    <Content Include="Files\Daniel.Gonzalez.1\perfil.png" />
-    <Content Include="Files\Daniel.Gonzalez.2\perfil.png" />
-    <Content Include="Files\Daniel.Gonzalez\perfil.png" />
-    <Content Include="Files\Emilia.Gomez\perfil.png" />
-    <Content Include="Files\Esteban.Romero\perfil.png" />
-    <Content Include="Files\Javier.Garcia.1\perfil.png" />
-    <Content Include="Files\Javier.Garcia\perfil.png" />
-    <Content Include="Files\Julia.Hernandez\perfil.png" />
-    <Content Include="Files\Maria.Perez.1\perfil.png" />
-    <Content Include="Files\Maria.Perez.2\perfil.png" />
-    <Content Include="Files\Maria.Perez\perfil.png" />
-    <Content Include="Files\Mario.Flores\perfil.png" />
-    <Content Include="Files\Matias.Diaz\perfil.png" />
-    <Content Include="Files\NombreTest.ApellidoTest\perfil.png" />
-    <Content Include="Files\Paula.Garcia\perfil.png" />
-    <Content Include="Files\Sofia.Sanchez\perfil.png" />
-    <Content Include="Files\TestNombre.TestApellido\perfil.png" />
+    <Content Include="Content\src\side-nav.css" />
+    <Content Include="Content\src\sideNavUsuario.css" />
     <Content Include="Global.asax" />
     <Content Include="Images\favicon.png" />
     <Content Include="Images\Inicio\Info.png" />
-    <Content Include="Images\Necesidad\basura.png" />
-    <Content Include="Images\Necesidad\constancia.png" />
-    <Content Include="Images\Necesidad\img.png" />
     <Content Include="Images\Perfil\Bulbasaur.png" />
     <Content Include="Images\Perfil\user-icon.png" />
     <Content Include="Scripts\lib\jquery\jquery.js" />
@@ -154,6 +135,7 @@
     <Content Include="Scripts\lib\toast\toast.js" />
     <Content Include="Scripts\src\CrearNecesidad.js" />
     <Content Include="Scripts\src\datepicker.js" />
+    <Content Include="Scripts\src\denuncia.js" />
     <Content Include="Scripts\src\Home.js" />
     <Content Include="Scripts\src\progressbar.js" />
     <Content Include="Web.config" />
@@ -161,7 +143,9 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DenunciaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MisDonacionesController.cs" />
     <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\NecesidadController.cs" />
     <Compile Include="Global.asax.cs">
@@ -188,25 +172,28 @@
     <Content Include="Views\Home\pv_Publicacion.cshtml" />
     <Content Include="Views\Home\pv_CardMasValorada.cshtml" />
     <Content Include="Views\Perfil\Datos.cshtml" />
-    <Content Include="Views\Perfil\MisDonaciones.cshtml" />
     <Content Include="Views\Necesidad\CrearNecesidad.cshtml" />
     <Content Include="Views\Home\Registrarse.cshtml" />
     <Content Include="Views\Home\Ingresar.cshtml" />
     <Content Include="Views\Home\Bienvenido.cshtml" />
     <Content Include="Views\Home\_InicioLayout.cshtml" />
-    <Content Include="Views\Home\pv_Buscador.cshtml" />
-    <Content Include="Views\Necesidad\_pvReferencia.cshtml" />
-    <Content Include="Views\Necesidad\DetalleNecesidad.cshtml" />
-    <Content Include="Views\Necesidad\ModificarNecesidad.cshtml" />
-    <Content Include="Views\Necesidad\_pvCamposModificacion.cshtml" />
-    <Content Include="Views\Necesidad\View.cshtml" />
-    <Content Include="Views\Necesidad\_pvCamposCreacion.cshtml" />
-    <Content Include="Views\Necesidad\_pvCamposDetalle.cshtml" />
+    <Content Include="Views\Shared\pv_SideNavUsuario.cshtml" />
+    <Content Include="Views\Perfil\Inicio.cshtml" />
+    <Content Include="Views\Necesidad\MisNecesidades.cshtml" />
+    <Content Include="Views\Necesidad\pv_CardMisNecesidades.cshtml" />
     <Content Include="Views\Denuncia\Inicio.cshtml" />
     <Content Include="Views\Denuncia\pv_CardDenuncias.cshtml" />
     <Content Include="Views\Denuncia\pv_DenunciaComentarios.cshtml" />
     <Content Include="Views\Denuncia\pv_DenunciaDetalle.cshtml" />
     <Content Include="Views\MisDonaciones\Inicio.cshtml" />
+    <Content Include="Views\Inicio.cshtml" />
+    <Content Include="Views\Perfil\MisDonaciones.cshtml" />
+    <Content Include="Views\Necesidad\DetalleNecesidad.cshtml" />
+    <Content Include="Views\Necesidad\ModificarNecesidad.cshtml" />
+    <Content Include="Views\Necesidad\_pvCamposCreacion.cshtml" />
+    <Content Include="Views\Necesidad\_pvCamposDetalle.cshtml" />
+    <Content Include="Views\Necesidad\_pvCamposModificacion.cshtml" />
+    <Content Include="Views\Home\pv_Buscador.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -216,6 +203,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Files\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
