Probando usar ApiController en WebApp

--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="PandemiaEntities" connectionString="metadata=res://*/ORM.Model.csdl|res://*/ORM.Model.ssdl|res://*/ORM.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TP-20201C;user id=admin;password=Admin2020;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PandemiaEntities" connectionString="metadata=res://*/ORM.Model.csdl|res://*/ORM.Model.ssdl|res://*/ORM.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TP-20201C;user id=admin;password=Administrador2020;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
