--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="PandemiaEntities" connectionString="metadata=res://*/ORM.Model.csdl|res://*/ORM.Model.ssdl|res://*/ORM.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TP-20201C;user id=admin;password=Admin2020;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PandemiaEntities" connectionString="metadata=res://*/ORM.Model.csdl|res://*/ORM.Model.ssdl|res://*/ORM.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TP-20201C;user id=admin;password=Administrador2020;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -69,4 +69,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
