Inicio de Mis Necesidades

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Controllers\DenunciaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MisDonacionesController.cs" />
+    <Compile Include="Controllers\MisNecesidadesController.cs" />
     <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\NecesidadController.cs" />
     <Compile Include="Global.asax.cs">
@@ -194,6 +195,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Files\" />
+    <Folder Include="Views\MisNecesidades\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
