--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Home\DonacionService.cs" />
     <Compile Include="Home\UsuarioService.cs" />
     <Compile Include="Home\DenunciaService.cs" />
     <Compile Include="Home\EmailService.cs" />
