--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -189,6 +189,7 @@
     <Content Include="Views\MisNecesidades\Inicio.cshtml" />
     <Content Include="Views\MisNecesidades\pv_CardMisNecesidades.cshtml" />
     <Content Include="Views\MisNecesidades\pv_MisNecesidadesDetalle.cshtml" />
+    <Content Include="Views\MisNecesidades\pv_NecesidadDetalle.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
