--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -178,7 +178,6 @@
     <Content Include="Views\Home\_InicioLayout.cshtml" />
     <Content Include="Views\Shared\pv_SideNavUsuario.cshtml" />
     <Content Include="Views\Perfil\Inicio.cshtml" />
-    <Content Include="Views\Necesidad\MisNecesidades.cshtml" />
     <Content Include="Views\Necesidad\pv_CardMisNecesidades.cshtml" />
     <Content Include="Views\Denuncia\Inicio.cshtml" />
     <Content Include="Views\Denuncia\pv_CardDenuncias.cshtml" />
@@ -188,8 +187,8 @@
     <Content Include="Views\MisDonaciones\pv_DonacionDetalle.cshtml" />
     <Content Include="Views\MisNecesidades\Inicio.cshtml" />
     <Content Include="Views\MisNecesidades\pv_CardMisNecesidades.cshtml" />
-    <Content Include="Views\MisNecesidades\pv_MisNecesidadesDetalle.cshtml" />
     <Content Include="Views\MisNecesidades\pv_NecesidadDetalle.cshtml" />
+    <Content Include="Views\MisNecesidades\pv_NecesidadModificar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
