Se termino con pagina de error

--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -110,6 +110,7 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Partial\DonacionHistorialMetaData.cs" />
+    <Compile Include="Partial\MensajeError.cs" />
     <Compile Include="Partial\IngresarMetaData.cs" />
     <Compile Include="Partial\NecesidadesMetaData.cs" />
     <Compile Include="Partial\PerfilMetaData.cs" />
