--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -65,7 +65,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Home\DonacionService.cs" />
-    <Compile Include="Home\UsuarioService.cs" />
     <Compile Include="Home\DenunciaService.cs" />
     <Compile Include="Home\EmailService.cs" />
     <Compile Include="Home\IngresarService.cs" />
@@ -73,7 +72,7 @@
     <Compile Include="Home\RegistrarseService.cs" />
     <Compile Include="Usuario\ArchivoService.cs" />
     <Compile Include="Usuario\DenunciaService.cs" />
-    <Compile Include="Usuario\DonacionService.cs" />
+    <Compile Include="Usuario\HistorialDonacionService.cs" />
     <Compile Include="Usuario\PerfilService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
