--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -209,6 +209,7 @@
     <Content Include="Views\MisNecesidades\pv_NecesidadDetalle.cshtml" />
     <Content Include="Views\MisNecesidades\pv_NecesidadModificar.cshtml" />
     <Content Include="Views\Shared\_ErrorPage.cshtml" />
+    <Content Include="Views\Home\AcercaDe.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
