Validacion de usuario logeado con filtro
- Uso de filtro Authorize

--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -15,6 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
+    <add name="PandemiaEntities" connectionString="metadata=res://*/ORM.Model1.csdl|res://*/ORM.Model1.ssdl|res://*/ORM.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TP-20201C;user id=admin;password=Administrador2020;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -27,6 +28,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.6" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Home/Ingresar"></forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
