--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -166,11 +166,11 @@
     <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\NecesidadController.cs" />
     <Compile Include="Controllers\DonacionApiController.cs" />
+    <Compile Include="Filters\PerfilAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\SessionHelper.cs" />
-    <Compile Include="Helpers\UsuarioLogeadoHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Necesidad.cs" />
   </ItemGroup>
