--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Usuario\ArchivoService.cs" />
     <Compile Include="Usuario\DenunciaService.cs" />
     <Compile Include="Usuario\HistorialDonacionService.cs" />
+    <Compile Include="Usuario\PaginadorService.cs" />
     <Compile Include="Usuario\PerfilService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
